--- a/htdocs/stylesheets/sass/screen.scss
+++ b/htdocs/stylesheets/sass/screen.scss
@@ -108,6 +108,7 @@ header {
 		a {
 			color: #000000;
 			text-decoration: none;
+			text-transform: lowercase;
 		}
 	}
 	
@@ -238,6 +239,15 @@ footer {
 
 
 @media only screen and (min-width : 481px) {
+	header h1 {
+		font-size: 5.5625em; /* 89 / 16 */
+		letter-spacing: .05em;
+	}
+
+	.wf-active header h1 {
+		letter-spacing: .1em;
+	}
+	
 	.about {
 		img {
 			width: 34%;
@@ -320,7 +330,7 @@ footer {
 
 @media only screen and (min-width : 960px) {
 	body {
-		margin: 8em auto;
+		margin: 11em auto;
 	}
 
 	header {
